# synclip

./: .gitignore  Cargo.toml  README.md  build.rs  justfile  rustfmt.toml
.run/: Run client.run.xml  Run server.run.xml
proto/: synclip.proto
src/: client.rs  clipboard.rs  lib.rs  main.rs  server.rs
src/clipboard/: local_clipboard.rs  remote_clipboard.rs
src/server/: synclip_rpc.rs
synclip-proto/: Cargo.toml  build.rs
synclip-proto/proto/: synclip.proto
synclip-proto/src/: lib.rs  synclip.rs
synclipper/: Cargo.toml
synclipper-proto/: Cargo.toml  build.rs
synclipper-proto/proto/: synclipper.proto
synclipper-proto/src/: lib.rs  synclipper.rs
synclipperd/: Cargo.toml
synclipperd/src/: lib.rs  synclipper_server.rs
synclipperd/src/synclipper_server/: rpc.rs
