[package]
name = "synclip"
description = "A cross-network clipboard synchronization tool."
authors = ["BppleMan"]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/BppleMan/synclip"

[dependencies]
prost = "0.12.3"
tonic = "0.10.2"
clipboard = "0.5.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
async-stream = "0.3.5"
color-eyre = "0.6.2"
clap = { version = "4.4.0", features = ["derive", "env"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.10.2"
