[package]
name = "synclip"
description = "synclip is a cross-network clipboard synchronization tool."
authors = ["BppleMan"]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/BppleMan/synclip"

[dependencies]
prost = "0.12.3"
tonic = "0.10.2"
clipboard = "0.5.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.10"
tokio-stream = { version = "0.1.14", features = ["full"] }
color-eyre = "0.6.2"
clap = { version = "4.4.0", features = ["derive", "env"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.10.2"
