[package]
name = "synclipper-proto"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build = "0.9.2"
