[package]
name = "synclipperd"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
synclipper-proto = { path = "../synclipper-proto" }

tokio.workspace = true
tonic.workspace = true
prost.workspace = true
async-stream.workspace = true
color-eyre.workspace = true
